  - Added attr title and label(s) for more flexible .gplot files (for pgm2)
    e.g.: attr wl_KF title "Fenster:".$value{KellerFenster}.", Entfeuchter: ".$value{Entfeuchter}
          .gplot: <TL> (is almost there!)
          attr wl_KF label "Fenster":"Entfeuchter"
          .gplot: <L0> ... <L9> (constant text is to be replaced individually)
  - Added attr global logdir, used by wildcard %ld in perl.pm
    e.g.: attr global logdir /var/tmp
          define emGaslog FileLog %ld/emGas.log emGas:.*CNT.*

- Sat Feb 15 2009 (Boris)
  - added counter differential per time in 81_M232Counter.pm, commandref.html
    updated

- Thu Mar 29 2009 (MartinH)
  - pgm3: bugfix, format table for userdef
  - pgm3: feature X10_support, taillogorder optional with date
  - pgm3: HMS100CO added, fhem.html relating pgm3 updated

- Sat May 30 2009 (Rudi)
  - 99_SUNRISE_EL: sunrise/sunset called in "at" computes correctly the next
    event. New "sunrise()/sunset()" calls added, min max optional parameter.

- Sun May 31 2009 (Boris)
  - 81_M232Counter.pm: counter stops at 65536; workaround makes counter wraparound

- Mon Jun 01 2009 (Boris)
  - 59_Weather.pm: new virtual device for weather forecasts, documentation
    updated.

- Tue Jun 09 2009 (Boris)
  - 11_FHT.pm: lazy attribute for FHT devices

- Sun Jun 14 2009 (Rudi)
  - 11_FHT.pm: tmpcorr attribute for FHT devices

- Sat Jun 20 2009 (Boris)
  - 09_USF1000.pm: new module to support USF1000S devices.

- Fri Aug 08 2009 (Boris)
  - 09_USF1000.pm: suppress inplausible readings from USF1000

- Sat Sep 12 2009 (Boris)
  - 00_CM11.pm: feature: get time, fwrev, set reopen for CM11 (Boris 2009-09-12)

- Sun Sep 20 2009 (Boris)
  - Module 09_BS.pm for brightness sensor added (Boris 2009-09-20)

- Sat Oct 03 2009 (Boris)
  - bugfix: missing blank in attribute list for FHT; exclude report from lazy
  - typos and anchors in documentation corrected

 - Sun Oct11 2009 (Boris)
  - finalized 09_BS.pm and documentation